@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1497] fixed evaluation of trigger function 'count' (Sasha)
  - [ZBX-1283] fixed group selection in maintenance edit form (Vedmak)
  - [ZBX-1316] fixed missing trigger expressions using expression constructor (Vedmak)
  - [ZBX-1473] fixed installation requires mb_string function from php 5.2 (Vedmak)
@@ -19,7 +20,7 @@ Changes for 1.8
  - [ZBX-1449] fixed possibility of editing templated graphs (Vedmak)
  - [ZBX-1174] fixed "Add host" operation in "Discovery" module, ports are now never updated when the host already exists (Dmitry)
  - [ZBX-1357] updated French translation. Thanks to alixen (Richlv)
- - [1306] fixed showing triggers that recently changed state as errors in dashboard (Vedmak)
+ - [ZBX-1306] fixed showing triggers that recently changed state as errors in dashboard (Vedmak)
  - [ZBX-1030] fixed security vulnerability in server allowing remote unauthenticated users to execute scripts. Thanks to Nicob (Sasha)
  - [ZBX-1437] fixed errors in events screen (Vedmak)
  - [ZBX-1433] fixed error viewing event (Vedmak)
